# RamPo

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  z-ToDo.md  z-beta-testers.md
docs/: zenodo_release_checklist.md
rampo/: __init__.py  _qt.py
rampo/rampo/: __init__.py  citation.py  rampo.py  version.py
rampo/rampo/assets/: RamPo.icns
rampo/rampo/control/: basespectrumcontroller.py  ccdazicontroller.py  ccdcontroller.py  ccdprocesscontroller.py  diffcontroller.py  exportpythoncontroller.py  jcpdscontroller.py  maincontroller.py  mapcontroller.py  mplcontroller.py  peakfitcontroller.py  peakfittablecontroller.py  ramaniohelpers.py  sequencecontroller.py  sessioncontroller.py  waterfallcontroller.py
rampo/rampo/ds_ccd/: CCDImage.py
rampo/rampo/ds_jcpds/: jcpds.py
rampo/rampo/ds_ramspec/: Spectrum.py  __init__.py  background.py
rampo/rampo/ds_section/: section.py
rampo/rampo/model/: __init__.py  diff_state.py  model.py  model_dir.py  param_session_io.py
rampo/rampo/mplstyle/: night.mplstyle
rampo/rampo/utils/: __init__.py  fileutils.py
rampo/rampo/view/: ccdhistwidget.py  mainwidget.py  mplwidget.py  qtd.py
