[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rampo"
dynamic = ["version"]
description = "GUI application for Raman spectroscopy analysis in high-pressure experiments."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [
  { name = "Dan Shim" },
]
license = "GPL-3.0-only"
keywords = ["raman", "spectroscopy", "gui", "science", "high-pressure"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "lmfit",
  "matplotlib",
  "numpy",
  "pillow",
  "PyQt6",
  "python-dateutil",
  "qtpy",
  "scipy",
  "xlwt",
]

[project.optional-dependencies]
cif = [
  "pymatgen",
]

[project.urls]
Homepage = "https://github.com/SHDShim/RamPo"
Repository = "https://github.com/SHDShim/RamPo.git"
Issues = "https://github.com/SHDShim/RamPo/issues"

[project.scripts]
rampo = "rampo.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "rampo.rampo.version.__version__"}

[tool.setuptools.packages.find]
include = ["rampo*"]

[tool.setuptools.package-data]
"rampo.rampo" = ["mplstyle/*.mplstyle"]
